--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -14,7 +14,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
     box-sizing: border-box;
 
     > .controls {
@@ -64,7 +63,7 @@
                     min-width: 120px;
                     max-width: 120px;
                     height: 80px;
-                    border-radius: 8px;
+                    border-radius: base.$radius;
                     overflow: hidden;
                     box-sizing: border-box;
                     cursor: pointer;
@@ -171,6 +170,10 @@
         .gm {
             display: none !important;
         }
+    }
+
+    > * {
+        border: 1px solid var(--color-not-intense);
     }
 }
 
