--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -14,7 +14,7 @@ body {
     font-family: 'Lato', sans-serif;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 8px;
     color: var(--color-text-primary);
     background-color: var(--color-background);
 
@@ -125,7 +125,7 @@ button.icon {
     min-width: 25px;
     height: 25px;
     font-size: 16px;
-    display: flex;
+    display: inline-flex;
     flex-direction: row-reverse;
     gap: 4px;
     align-items: center;
