--- a/web/sass/panels.scss
+++ b/web/sass/panels.scss
@@ -40,6 +40,7 @@
     border-radius: base.$radius;
     padding: 24px 32px 16px 32px;
     gap: 16px;
+    min-width: 240px;
 
     h2 {
         text-align: center;
