--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -81,6 +81,12 @@
                 }
             }
         }
+
+        #prefabImage {
+            width: 80px;
+            height: 80px;
+            align-self: center;
+        }
     }
 
     #selectionProperties {
