added ghost movable to preview placement

--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -271,6 +271,20 @@
     border: 2px solid black;
     box-sizing: border-box;
     outline: 1px solid transparent;
+
+    #movableGhost {
+        opacity: 1;
+        background-color: white;
+    }
+
+    &:not(.drag) #movableGhost {
+        display: none;
+    }
+    &.drag {
+        * {
+            pointer-events: none;
+        }
+    }
 }
 
 #grid, canvas {
