--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -195,8 +195,8 @@ input {
     }
 }
 input[type=color] {
-    border: none;
-    margin: 0;
+    border: none !important;
+    margin: 0 !important;
     width: 100%;
 }
 
