--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -55,6 +55,7 @@
             gap: 0;
 
             > .prefab {
+                @extend .with-tooltip;
                 @include base.center-background;
                 width: 40px;
                 height: 40px;
@@ -73,7 +74,7 @@
                     transform: scale(0.95);
 
                     &:hover {
-                        opacity: 0.7;
+                        opacity: 1;
                     }
                 }
                 &:active {
