--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -108,10 +108,23 @@
         padding: 8px;
         gap: 8px;
         cursor: default;
-        animation: popup 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
-
+        white-space: nowrap;
+        transform-origin: top right;
+        transition-duration: 0.1s;
+        transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+        opacity: 0.7;
+    
         > span {
             gap: 8px;
+            justify-content: flex-start;
+    
+            > input {
+                width: 100%;
+            }
+        }
+    
+        &:hover {
+            opacity: 1;
         }
     }
 
@@ -332,7 +345,8 @@
     }
     &.selected {
         border: 2px solid var(--color-primary);
-        box-shadow: 0 0 20px 20px #fffa,
-                    0 0 8px #000a inset;
+        box-shadow: 0 0 16px 16px #fff7,
+                    0 0 8px #0008 inset;
+        z-index: 3;
     }
 }
