--- a/web/sass/game.scss
+++ b/web/sass/game.scss
@@ -112,7 +112,7 @@
         transform-origin: top right;
         transition-duration: 0.1s;
         transition-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
-        opacity: 0.7;
+        opacity: 0.8;
     
         > span {
             gap: 8px;
@@ -122,9 +122,9 @@
                 width: 100%;
             }
         }
-    
+
         &:hover {
-            opacity: 1;
+            opacity: 1 !important;
         }
     }
 
@@ -335,7 +335,7 @@
     height: calc(var(--size) * 100%);
     box-sizing: border-box;
     box-shadow: 0 0 8px #000a;
-    transition-duration: 0.1s;
+    transition-duration: 0.05s;
     transition-property: border-color, border-width;
 
     --size: 1;
@@ -344,9 +344,15 @@
         cursor: move;
     }
     &.selected {
-        border: 2px solid var(--color-primary);
-        box-shadow: 0 0 16px 16px #fff7,
+        border: 3px solid white;
+        box-shadow: 0 0 16px 4px #000a,
                     0 0 8px #0008 inset;
         z-index: 3;
+    }
+
+    &:hover {
+        #selectionProperties {
+            opacity: 0.9 !important;
+        }
     }
 }
