--- a/web/sass/base.scss
+++ b/web/sass/base.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kreon&family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kreon&family=Lato&family=Fira+Mono&display=swap');
 
 $radius: 4px;
 
